2003-09-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: don't process code render tags inside scripts. Check
	the language of the script and treat javascript as verbatim input.
	Fixes bug #48592.

2003-09-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TemplateControlCompiler.cs: fixed bug #48212.

2003-09-18  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebServiceCompiler.cs: remove the temporary files here too.

2003-08-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: fixed bug #46429.

2003-08-01  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Directive.cs: support @WebHandler.
	
2003-07-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TemplateControlCompiler.cs: support string []. Fixes bug #46415.

2003-07-08  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BaseCompiler.cs: first look for cached items, then generate the tree.
	This should speed things up.

	* CachingCompiler.cs: when compiling web services, use the full path of
	the .asmx file as key when caching.

	* WebServiceCompiler.cs: first look for cached items, then generate
	the source file.

2003-07-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspParser.cs: more useful error information,

	* BaseCompiler.cs:
	* CachingCompiler.cs: honor the debug="true" option.

	* TemplateControlCompiler.cs: small fixes for templates.

2003-07-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BaseCompiler.cs: made Compiler property virtual.

	* CachingCompiler.cs: added support for compiling web services.

	* WebServiceCompiler.cs: implemented.

2003-05-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CachingCompiler.cs: fixed bug #43477.

2003-05-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspParser.cs:
	* AspTokenizer.cs: fixed bugs #43206 and #43371.

2003-05-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TemplateControlCompiler.cs: duh! Generate SupportAutoEvents instead